# oz-mini-Finance-Manager

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml  test.sh
.github/workflows/: checks.yml
apps/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/analysis/: models.py  tests.py
apps/analysis/migrations/: 0001_initial.py
apps/core/management/commands/: wait_for_db.py
apps/notifications/: apps.py  models.py  tests.py
apps/notifications/migrations/: 0001_initial.py
apps/transactions/: models.py  serializers.py  tests.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0002_transaction_history_account.py  0003_alter_transaction_history_account.py
apps/user/: admin.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_last_login.py  0003_user_is_staff.py
config/settings/: base.py  dev.py  prod.py
config/urls/: local_url.py  prod_url.py
